tutorial/projects/Akshy/reports/perform_search/2024.04.28.13.21.33.766/perform_search/execution_info.log
13:21:36.928 INFO Test execution started: perform_search
13:21:36.929 INFO Browser: chrome
13:21:36.932 ERROR SyntaxError: invalid syntax
  File "C:\Users\devad\PycharmProjects\golem\tutorial\projects\Akshy\tests\perform_search.py", line 6
    navigate(http://wikipedia.org)
                 ^
SyntaxError: invalid syntax

